--- a/main.html
+++ b/main.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Architecture</title>
+    <link rel="stylesheet" href="architecture.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+       <div class="container"></div>
+       
+       <img src="https://www.google.co.in/url?sa=i&url=https%3A%2F%2Fthearchitectsdiary.com%2Fshould-i-study-interior-design-or-architecture%2F&psig=AOvVaw3n6gOfS6xwRipq2BjQxS5I&ust=1694158437788000&source=images&cd=vfe&opi=89978449&ved=0CBIQjhxqFwoTCMDsx5P-l4EDFQAAAAAdAAAAABAE" width="300px" height="200px" alt="architecture.jpg">
+    
+    </body>
 </html>
